
@startuml

entity Log {
    id : number
    method : string
    url : string
    status : number
    duration : number
    createdAt : Date
}

entity Permission {
    id : number
    name : string
}

entity Role {
    id : number
    name : string
}

entity User {
    id : number
    name : string
    email : string
    password : string
    isApiUser : boolean
    active : boolean
    apiKey : string
    apiKeyLastDigits : string
    apiKeyExpiration : Date
}

entity Assistant {
    id : number
    type : string
    active : boolean
    isAutomatic : boolean
    working : string
    config : string
}

entity Category {
    id : number
    code : string
    name : string
    parentId : number
}

entity Channel {
    id : number
    code : string
    service : string
    config : string
    expiresIn : number
    name : string
}

entity Function {
    id : number
    name : string
    url : string
    params : string
    headers : string
    sendBodyParams : boolean
    templateSource : string
    assistantId : number
}

entity FunctionCall {
    id : number
    params : string
    response : string
}

entity InstanceAssistant {
    id : number
    isDefault : boolean
    instanceId : number
    assistantId : number
}

entity Instance {
    id : number
    number : string
    externalId : string
    createdAt : Date
    updatedAt : Date
    channelId : number
}

entity Message {
    id : number
    message : string
    dateCreated : Date
    status : string
    queueId : string
    type : string
    threadId : number
}

entity Queue {
    id : number
    payload : any
    status : string
    redisId : string
    errorReason : string
    createdAt : Date
    updatedAt : Date
}

entity Thread {
    id : number
    externalInstance : string
    expirationDate : Date
    instanceId : number
}

User --|{ Role : roles
Role --|{ Permission : permissions
Role --|{ User : users
Permission }|--|| Role : roles

Assistant --|{ Category : categories
Assistant --|{ Thread : threads
Assistant --|{ Message : messages
Assistant --|{ InstanceAssistant : instanceAssistants
Assistant --|{ Function : functions

Category --|{ Category : parent
Category --|{ Category : subcategories
Category --|{ Assistant : assistants
Category --|{ Thread : threads

Channel --|{ Thread : threads
Channel --|{ Instance : instances

Function --|{ Assistant : assistant
Function --|{ FunctionCall : functionCalls

FunctionCall }|--|| Thread : thread

InstanceAssistant }|--|| Instance : instance
InstanceAssistant }|--|| Assistant : assistant

Instance --|{ Channel : channel
Instance --|{ Thread : threads
Instance --|{ InstanceAssistant : instanceAssistants

Message --|{ Thread : thread
Message --|{ Assistant : assistant

Thread --|{ Channel : channel
Thread --|{ Category : category
Thread --|{ Message : messages
Thread --|{ Assistant : assistants
Thread --|{ Instance : instance
Thread --|{ FunctionCall : functionCalls

@enduml